-Fixed loading issue with SVG animation -increased button widths on mobile -fixed footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-.modalDialog { display:block !important; }
 
 *,:after,:before{-webkit-box-sizing:border-box;box-sizing:border-box}
 .clearfix:before,.clearfix:after{content:'';display:table}
@@ -14,7 +13,7 @@ p{font-family:'Open Sans',sans-serif;font-size:12px;letter-spacing:1px;line-heig
 body{height:100%;margin:0;min-height:100%;background:#FFF;font-family:'Open Sans',sans-serif;border:15px solid #FFF;background-image:url(../img/mobile/bg.jpg)}
 #bgvid{position:fixed;top:50%;left:50%;min-width:100%;min-height:100%;width:auto;height:auto;z-index:-100;-webkit-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%);background:url(../img/headerCover.jpg) no-repeat;background-size:cover;-webkit-transition:1s opacity;transition:1s opacity}
 .container{margin:0 auto}
-locations{position:absolute;top:100%;left:0;height:1180px;width:100%;display:block;background:#fff;padding:0 4%}
+locations{position:absolute;top:100%;left:0;height:1250px;width:100%;display:block;background:#fff;padding:0 4%}
 hero{height:75vh;width:100%;margin:0 auto;padding:0;display:flex;justify-content:center;align-items:center;overflow:auto}
 hero .logo{max-width:90%;height:auto}
 hero div{color:#FFF;width:100%;padding:0;padding-top:10px;display:block;text-align:center}
@@ -32,7 +31,7 @@ scroll_cta span{font-size:64%;color:#FFF;margin-left:-60px;letter-spacing:.4em;t
 #location-nv.col-xs-12.col-sm-6.col-md-3.col-lg-3{padding:0 0 50px}
 #location-la.col-xs-12.col-sm-6.col-md-3.col-lg-3{padding:0 0 50px}
 #location-r.col-xs-12.col-sm-6.col-md-3.col-lg-3{padding:0 0 50px}
-.map-btn{background-color:#f06d54;position:absolute;width:180px;height:40px;z-index:26;text-align:center}
+.map-btn{background-color:#f06d54;position:absolute;width:220px;height:40px;z-index:26;text-align:center}
 .map-btn span{padding-top:30px;color:#fff}
 .footer{display:block;position:absolute;left:0;bottom:0;width:100%;background-color:#000;padding:5% 0;text-align:center}
 .footer small{color:#CECCCC}
@@ -188,7 +187,7 @@ scroll_cta span{font-size:64%;color:#FFF;margin-left:-60px;letter-spacing:.4em;t
 .input__label-content--kohana,.icon--kohana,.input__field--kohana:focus + .input__label--kohana .input__label-content--kohana,.input--filled .input__label-content--kohana{-webkit-transition-timing-function:cubic-bezier(0.7,0,0.3,1);transition-timing-function:cubic-bezier(0.7,0,0.3,1)}
 .input__field--kohana:focus + .input__label--kohana .icon--kohana,.input--filled .icon--kohana{-webkit-transform:translate3d(0,0,0);transform:translate3d(0,0,0)}
 @media screen and (min-width: 414px) {
-locations{padding:0 6%;height:1190px}
+locations{padding:0 6%;height:1270px}
 }
 @media screen and (min-width: 768px) {
 h1{font-family:'Open Sans',sans-serif;font-size:18px;letter-spacing:2px;text-transform:uppercase}
@@ -200,10 +199,12 @@ hero{height:75vh;width:85%;margin:0 auto;padding-top:250px;display:flex;justify-
 hero .logo{max-width:85%;height:auto}
 hero div{color:#FFF;width:85%;padding:0;padding-top:10px;display:block;text-align:center}
 #form-btn{top:20px;left:50%;font-size:85%}
-locations{padding:0 6%;height:940px}
+locations{padding:0 6%;height:930px}
 #locationVid{width:100%;padding-top:20px}
 #about.row{padding-top:90px}
 .modalDialog{position:fixed;font-family:Arial,Helvetica,sans-serif;top:0;right:0;bottom:0;left:0;background:rgba(0,0,0,0.8);z-index:99999;opacity:0;-webkit-transition:opacity 400ms ease-in;-moz-transition:opacity 400ms ease-in;transition:opacity 400ms ease-in;pointer-events:none}
+
+.map-btn{background-color:#f06d54;position:absolute;width:140px;height:40px;z-index:26;text-align:center}
 .modalDialog:target{opacity:1;pointer-events:auto}
 .modalDialog > div{width:280px;position:relative;margin:20vh auto;padding:15px 60px 15px 30px;background:#fff}
 .google-map{margin-left:-10%;width:50%}
